--- a/index.html
+++ b/index.html
@@ -13,26 +13,80 @@
 
 <body>
   <div id="canvas-container">
-    <canvas id="canvas-real" class="canvas" width='1280px' height='720px'></canvas>
-    <canvas id="canvas-draft" class="canvas" width='1280px' height='720px'></canvas>
+    <canvas id="canvas-real" class="canvas" width='900px' height='500px'></canvas>
+    <canvas id="canvas-draft" class="canvas" width='900px' height='500px'></canvas>
   </div>
+
+  <div class="slidecontainer">
+    <input type="range" min="1" max="50" value="15" class="slider" id="pixel">
+    <p>Pixel: <span id="displayVal"></span></p>
+  </div>
+
   <div class="buttons">
     <span class="btn btn-primary fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
     <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
+    <span class="btn btn-info fa fa-paint-brush" id="drawing-circle">Drawing Circle</span>
+    <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
+    <br>
+    <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
+    <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
   </div>
 
+  <label for="color-input" id="color-label" style="background-color: red"></label>
+  <input type="checkbox" id="color-input" checked></input>
+
+  <div id="color-picker">
+    <canvas id="color-block" height="150" width="150"></canvas>
+    <canvas id="color-strip" height="150" width="30"></canvas>
+  </div>
+
+
   <script type='text/javascript' src="canvas-common.js"></script>
+  <!-- pen tool --->
   <script type='text/javascript' src="drawing-line.js"></script>
+  <!-- rectangle tool --->
   <script type='text/javascript' src="drawing-rectangle.js"></script>
+  <!-- circle tool --->
+  <script type='text/javascript' src="drawing-circle.js"></script>
+  <!-- ellipse tool --->
+  <script type='text/javascript' src="drawing-ellipse.js"></script>
+  <!-- eraser tool --->
+  <script type='text/javascript' src="eraser.js"></script>
+  <!-- color-picker tool --->
+  <script type='text/javascript' src="color-picker.js"></script>
+  <!-- font-size display tool --->
+  <script type='text/javascript' src="fontsizeGet.js"></script>
+
+
   <script type='text/javascript'>
+
+  //call different feature
+
     $('#drawing-rectangle').click(() => {
       currentFunction = new DrawingRectangle(contextReal, contextDraft);
     });
     $('#drawing-line').click(() => {
       currentFunction = new DrawingLine(contextReal, contextDraft);
     });
-    currentFunction = new DrawingRectangle(contextReal, contextDraft);    
+    $('#drawing-circle').click(() => {
+      currentFunction = new DrawingCircle(contextReal, contextDraft);
+    });
+    $('#drawing-ellipse').click(() => {
+      currentFunction = new DrawingEllipse(contextReal, contextDraft);
+    });
+    $('#eraser').click(() => {
+      currentFunction = new Eraser(contextReal, contextDraft);
+    });
+
+  // clear all
+    $('#clear-all').click(() => {
+      contextReal.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
+    });
+
+  // default to be rectangle feature
+    currentFunction = new DrawingRectangle(contextReal, contextDraft);
   </script>
+
 </body>
 
 </html>
