--- a/index.html
+++ b/index.html
@@ -20,23 +20,19 @@
     <span class="btn btn-primary fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
     <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
     <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
-    <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
     <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
     <span class="btn btn-info fa fa-paint-brush" id="drawing-polygon">Drawing Polygon</span>
-    <span class="btn btn-info fa fa-paint-brush" id="pan">Pan</span>
     <span class="btn btn-info fa fa-paint-brush" id="previous">Previous</span>
     <span class="btn btn-info fa fa-paint-brush" id="next">Next</span>
   </div>
 
-  <script type='text/javascript' src="function/canvas-common.js"></script>
-  <script type='text/javascript' src="function/drawing-line.js"></script>
-  <script type='text/javascript' src="function/drawing-rectangle.js"></script>
-  <script type='text/javascript' src="function/drawing-straightLine.js"></script>
-  <script type='text/javascript' src="function/eraser.js"></script>
-  <script type='text/javascript' src="function/drawing-ellipse.js"></script>
-  <script type='text/javascript' src="function/drawing-polygon.js"></script>
-  <script type='text/javascript' src="function/pan.js"></script>
-  <script type='text/javascript' src="function/snapshot.js"></script>
+  <script type='text/javascript' src="canvas-common.js"></script>
+  <script type='text/javascript' src="drawing-line.js"></script>
+  <script type='text/javascript' src="drawing-rectangle.js"></script>
+  <script type='text/javascript' src="drawing-straightLine.js"></script>
+  <script type='text/javascript' src="drawing-ellipse.js"></script>
+  <script type='text/javascript' src="drawing-polygon.js"></script>
+  <script type='text/javascript' src="snapshot.js"></script>
   <script type='text/javascript'>
     currentFunction = new DrawingEllipse(contextReal, contextDraft);
 
@@ -50,17 +46,11 @@
     $('#drawing-straightLine').click(() => {
       currentFunction = new DrawingStraightLine(contextReal, contextDraft);
     });  
-    $('#eraser').click(() => {
-      currentFunction = new Eraser(contextReal, contextDraft);
-    });
     $('#drawing-ellipse').click(() => {
       currentFunction = new DrawingEllipse(contextReal, contextDraft);
     });
     $('#drawing-polygon').click(() => {
       currentFunction = new DrawingPolygon(contextReal, contextDraft);
-    });
-    $('#pan').click(() => {
-      currentFunction = new Pan(contextReal, contextDraft);
     });
 
     // Control the snapshot
@@ -68,6 +58,7 @@
       Previous();
     });
     $('#next').click(() => {
+      currentFunction.reset();
       Next();
     });
 
