added brush features

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
     </div>
 
     <div class="slidecontainer">
-        <input type="range" min="1" max="50" value="15" class="slider" id="pixel">
+        <input type="range" min="1" max="50" value="5" class="slider" id="pixel">
         <p>Pixel:
-            <span id="displayVal"></span>
+            <span id="displayVal1"></span>
+        </p>
+
+        <input type="range" min="1" max="50" value="5" class="slider" id="blur">
+        <p>Blur:
+            <span id="displayVal2"></span>
         </p>
     </div>
 
@@ -40,6 +45,8 @@
         <span class="btn btn-info fa fa-paint-brush" id="selectors">Select</span>
         <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
         <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
+        <span class="btn btn-info fa fa-paint-brush" id="linepattern-brush">Line Pattern Brush</span>
+        <span class="btn btn-info fa fa-paint-brush" id="lineshadow-brush">Line Shadow Brush</span>
         <button id="background-fill" type="button" class="btn btn-primary">Background</button>
         <button id="openFile" type="button" class="btn btn-primary">Upload</button>
         <input id="file" type="file" accept=".png, .jpg, jpeg" />
@@ -47,7 +54,7 @@
     </div>
 
     <label for="color-input" id="color-label" style="background-color: red"></label>
-    <input type="checkbox" id="color-input" checked></input>
+    <input type="checkbox" id="color-input"></input>
 
     <div id="color-picker">
         <canvas id="color-block" height="150" width="150"></canvas>
@@ -71,7 +78,7 @@
 
     <script type='text/javascript'>
         // default to be rectangle feature
-        currentFunction = new DrawingRectangle(contextReal, contextDraft);
+        currentFunction = new DrawingLine(contextReal, contextDraft);
 
         $('#drawing-rectangle').click(() => {
             currentFunction = new DrawingRectangle(contextReal, contextDraft);
@@ -100,20 +107,32 @@
         $('#openFile').click(() => {
             currentFunction = new triggerClick();
         });
+        $('#linepattern-brush').click(() => {
+            currentFunction = new LinePatternBrush(contextReal);
+            $('#pixel').prop('min','10');
+            $('#displayVal1').html($('#pixel').val());
+        });
+        $('#lineshadow-brush').click(() => {
+            currentFunction = new LineShadowBrush(contextReal, contextDraft);
+        });
+       
 
         // Control the snapshot
         $('#previous').click(() => {
             Previous();
         });
         $('#next').click(() => {
-            currentFunction.reset();
             Next();
         });
 
         // clear all
         $('#clear-all').click(() => {
-            contextReal.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
-            contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height)
+          contextReal.clearRect(0, 0, canvasReal.width, canvasReal.height);
+          contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
+          currentFunction.reset();
+          snapshot[0] = contextReal.getImageData(0,0, canvasReal.width, canvasReal.height);
+          index = 0;
+          snapshot.length = 1;
         });
 
     </script>
