--- a/index.html
+++ b/index.html
@@ -17,10 +17,41 @@
 </head>
 
 <body>
+
+    <div id = "control-board-wrapper1" class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="buttons" >
+            <span class="btn btn-info fa fa-paint-brush" id="previous">Previous</span>
+            <span class="btn btn-info fa fa-paint-brush" id="next">Next</span>
+            <span class="btn btn-info fa fa-paint-brush" id="selectors">Select</span>
+            <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
+            <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
+            <span class="btn btn-info fa fa-paint-brush" id="background-fill">Background</span>
+
+            <span class="btn btn-info fa fa-paint-brush" id="openFile">Upload</span>
+            <input id="file" type="file" accept=".jpg, .jpeg, .png">
+
+            <a class="btn btn-info" href ="#" id="downLoad" download="image.jpeg">Download</a>
+        </div> <!--close buttons-->
+    </div> <!--close control-board-wrapper-->
+
+
     <div id="canvas-container">
         <canvas id="canvas-real" class="canvas" width='900px' height='500px'></canvas>
         <canvas id="canvas-draft" class="canvas" width='900px' height='500px'></canvas>
     </div>
+
+
+    <div id = "control-board-wrapper2" class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="buttons2">
+            <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-polygon">Drawing Polygon</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
+        </div>
+    <div>
+
+
 
     <div class="slidecontainer">
         <input type="range" min="1" max="50" value="15" class="slider" id="pixel">
@@ -29,7 +60,7 @@
         </p>
     </div>
 
-    <div class="buttons" >
+    <!--<div class="buttons" >
         <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
@@ -54,7 +85,7 @@
     <div id="color-picker">
         <canvas id="color-block" height="150" width="150"></canvas>
         <canvas id="color-strip" height="150" width="30"></canvas>
-    </div>
+    </div>-->
 
 
     <script type='text/javascript' src="canvas-common.js"></script>
@@ -104,8 +135,9 @@
         });
 
         $('#downLoad').on('click', () => {
-        document.getElementById("downLoad").download = "image.jpg";
-        document.getElementById("downLoad").href = document.getElementById("canvas").toDataURL("image/jpeg");
+        document.getElementById("downLoad").download = "image.jpeg";
+
+        document.getElementById("downLoad").href = document.getElementById("canvas-real").toDataURL("image/jpeg");
         });
 
         // Control the snapshot
