--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </p>
     </div>
 
-    <div class="buttons">
-        <span class="btn btn-primary fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
+    <<div class="buttons" >
+        <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
@@ -47,11 +47,13 @@
         <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
         <span class="btn btn-info fa fa-paint-brush" id="linepattern-brush">Line Pattern Brush</span>
         <span class="btn btn-info fa fa-paint-brush" id="lineshadow-brush">Line Shadow Brush</span>
-        <span class="btn btn-info fa fa-paint-brush" id="testing">Testing</span>
         <button id="background-fill" type="button" class="btn btn-primary">Fill Canvas</button>
         <button id="openFile" type="button" class="btn btn-primary">Upload</button>
-        <input id="file" type="file" accept=".png, .jpg, jpeg" />
+        <input id="file" type="file" accept=".png, .jpg, jpeg"/>
+        <span class="btn btn-info fa fa-paint-brush" id="openFile">Upload</span>
+        <input id="file" type="file" accept=".jpg, .jpeg, .png">
 
+        <a class="btn btn-info" href ="#" id="downLoad" download="image.jpeg">Download</a>
     </div>
 
     <label for="color-input" id="color-label" style="background-color: red"></label>
@@ -61,7 +63,6 @@
         <canvas id="color-block" height="150" width="150"></canvas>
         <canvas id="color-strip" height="150" width="30"></canvas>
     </div>
-
 
     <script type='text/javascript' src="canvas-common.js"></script>
     <script type='text/javascript' src="drawing-line.js"></script>
@@ -116,12 +117,11 @@
         $('#lineshadow-brush').click(() => {
             currentFunction = new LineShadowBrush(contextReal, contextDraft);
         });
-        $('#testing').click(() => {
-          contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
-          contextDraft.strokeRect(100,100,300,300);
-          contextReal.drawImage(canvasDraft, 0, 0);
+
+        $('#downLoad').on('click', () => {
+            document.getElementById("downLoad").download = "image.jpeg";
+            document.getElementById("downLoad").href = document.getElementById("canvas-real").toDataURL("image/jpeg");
         });
-       
 
         // Control the snapshot
         $('#previous').click(() => {
