--- a/index.html
+++ b/index.html
@@ -17,50 +17,24 @@
 </head>
 
 <body>
-
-    <div id = "control-board-wrapper1" class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="buttons" >
-            <span class="btn btn-info fa fa-paint-brush" id="previous">Previous</span>
-            <span class="btn btn-info fa fa-paint-brush" id="next">Next</span>
-            <span class="btn btn-info fa fa-paint-brush" id="selectors">Select</span>
-            <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
-            <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
-            <span class="btn btn-info fa fa-paint-brush" id="background-fill">Background</span>
-
-            <span class="btn btn-info fa fa-paint-brush" id="openFile">Upload</span>
-            <input id="file" type="file" accept=".jpg, .jpeg, .png">
-
-            <a class="btn btn-info" href ="#" id="downLoad" download="image.jpeg">Download</a>
-        </div> <!--close buttons-->
-    </div> <!--close control-board-wrapper-->
-
-
     <div id="canvas-container">
         <canvas id="canvas-real" class="canvas" width='900px' height='500px'></canvas>
         <canvas id="canvas-draft" class="canvas" width='900px' height='500px'></canvas>
     </div>
 
-
-    <div id = "control-board-wrapper2" class = "col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <div class="buttons2">
-            <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
-            <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
-            <span class="btn btn-info fa fa-paint-brush" id="drawing-polygon">Drawing Polygon</span>
-            <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
-            <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
-        </div>
-    <div>
-
-
-
     <div class="slidecontainer">
-        <input type="range" min="1" max="50" value="15" class="slider" id="pixel">
+        <input type="range" min="1" max="50" value="5" class="slider" id="pixel">
         <p>Pixel:
-            <span id="displayVal"></span>
+            <span id="displayVal1"></span>
+        </p>
+
+        <input type="range" min="1" max="50" value="5" class="slider" id="blur">
+        <p>Blur:
+            <span id="displayVal2"></span>
         </p>
     </div>
 
-    <!--<div class="buttons" >
+    <<div class="buttons" >
         <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
         <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
@@ -71,8 +45,11 @@
         <span class="btn btn-info fa fa-paint-brush" id="selectors">Select</span>
         <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
         <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
-        <span class="btn btn-info fa fa-paint-brush" id="background-fill">Background</span>
-
+        <span class="btn btn-info fa fa-paint-brush" id="linepattern-brush">Line Pattern Brush</span>
+        <span class="btn btn-info fa fa-paint-brush" id="lineshadow-brush">Line Shadow Brush</span>
+        <button id="background-fill" type="button" class="btn btn-primary">Fill Canvas</button>
+        <button id="openFile" type="button" class="btn btn-primary">Upload</button>
+        <input id="file" type="file" accept=".png, .jpg, jpeg"/>
         <span class="btn btn-info fa fa-paint-brush" id="openFile">Upload</span>
         <input id="file" type="file" accept=".jpg, .jpeg, .png">
 
@@ -80,13 +57,12 @@
     </div>
 
     <label for="color-input" id="color-label" style="background-color: red"></label>
-    <input type="checkbox" id="color-input" checked></input>
+    <input type="checkbox" id="color-input"></input>
 
     <div id="color-picker">
         <canvas id="color-block" height="150" width="150"></canvas>
         <canvas id="color-strip" height="150" width="30"></canvas>
-    </div>-->
-
+    </div>
 
     <script type='text/javascript' src="canvas-common.js"></script>
     <script type='text/javascript' src="drawing-line.js"></script>
@@ -104,7 +80,7 @@
 
     <script type='text/javascript'>
         // default to be rectangle feature
-        currentFunction = new DrawingRectangle(contextReal, contextDraft);
+        currentFunction = new DrawingLine(contextReal, contextDraft);
 
         $('#drawing-rectangle').click(() => {
             currentFunction = new DrawingRectangle(contextReal, contextDraft);
@@ -133,11 +109,18 @@
         $('#openFile').click(() => {
             currentFunction = new triggerClick();
         });
+        $('#linepattern-brush').click(() => {
+            currentFunction = new LinePatternBrush(contextReal);
+            $('#pixel').prop('min','10');
+            $('#displayVal1').html($('#pixel').val());
+        });
+        $('#lineshadow-brush').click(() => {
+            currentFunction = new LineShadowBrush(contextReal, contextDraft);
+        });
 
         $('#downLoad').on('click', () => {
-        document.getElementById("downLoad").download = "image.jpeg";
-
-        document.getElementById("downLoad").href = document.getElementById("canvas-real").toDataURL("image/jpeg");
+            document.getElementById("downLoad").download = "image.jpeg";
+            document.getElementById("downLoad").href = document.getElementById("canvas-real").toDataURL("image/jpeg");
         });
 
         // Control the snapshot
@@ -145,14 +128,17 @@
             Previous();
         });
         $('#next').click(() => {
-            currentFunction.reset();
             Next();
         });
 
         // clear all
         $('#clear-all').click(() => {
-            contextReal.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
-            contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height)
+          contextReal.clearRect(0, 0, canvasReal.width, canvasReal.height);
+          contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
+          currentFunction.reset();
+          snapshot[0] = contextReal.getImageData(0,0, canvasReal.width, canvasReal.height);
+          index = 0;
+          snapshot.length = 1;
         });
 
     </script>
